Project reorganized to work with Weather Icons API. Added reference to external CSS file to index. Re-arranged index contents to fit new design style and remove redundancy for now. Script updated to print code for weathericons instead of linking to the OpenWeatherMap API's icons, comments trimmed down, and code for swapUnits redone to avoid the original F value changing due to repeated rounding.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" type="text/css" href="./css/style.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="./style.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="https://erikflowers.github.io/weather-icons/css/weather-icons.min.css" media="screen" />
 <!-- Scripts -->
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 <script type="text/javascript" src="./script.js"></script>
@@ -14,23 +15,32 @@
 </head>
 
 <body>
-  <section>
-    <div id="weatherBox" class="container">
+  <section class="container text-center">
+    <div class="row">
+      <p>Weather data provided by <a href="https://openweathermap.org/api" target="_blank">OpenWeatherMap API.</a></p>
+      <h1>The weather in <span id="city"></span> is currently: <span id=weatherDescription></span></h1>
+      <h2><span id="temperature"></span></h2>
+      <p id="weatherIcon"></p>
+    </div>
+    <div class="row" id="buttons">
+      <button class="btn btn-primary scaleBtn" id="switchUnits" onclick="swapUnits()">Swap Units (F/C)</button>
+    </div>
+    <!-- <div id="weatherBox" class="container">
       <div class="row text-center">
         <h1>Current Weather</h1>
         <p>Weather state provided by <a href="https://openweathermap.org/api" target="_blank">OpenWeatherMap API.</a></p>
       </div>
-      <div class="row text-center well nice">
+      <div class="row text-center well nice"> -->
         <!-- Span for jquery to target -->
-        <span id="city"></span>
+        <!-- <span id="city"></span>
         <span id="temperature"></span>
         <span id="weather-state"></span>
       </div>
       <div class="buttons row text-center">
-        <button class="btn btn-primary scaleBtn" id="switchUnits" onclick="swapUnits()">Swap Units (F/C)</button>
-        <button class="btn btn-info scaleBtn" id="refresh" onclick="getWeather()">Refresh!</button>
-      </div>
-    </div>
+        <button class="btn btn-primary scaleBtn" id="switchUnits" onclick="swapUnits()">Swap Units (F/C)</button> -->
+        <!-- <button class="btn btn-info scaleBtn" id="refresh" onclick="getWeather()">Refresh!</button> -->
+      <!-- </div>
+    </div> -->
   </section>
 
   <!-- CONTACT INFO SECTION -->
@@ -42,8 +52,6 @@
           <li><a href="https://www.linkedin.com/in/shawn-stern-48496747 " target='_blank'><i class="fa fa-2x fa-linkedin " aria-hidden="true "></i></a></li>
           <li><a href="https://github.com/stern-shawn" target='_blank'><i class="fa fa-2x fa-github " aria-hidden="true "></i></a></li>
           <li><a href="https://www.freecodecamp.com/stern-shawn" target='_blank'><i class="fa fa-2x fa-fire " aria-hidden="true "></i></a></li>
-          <li><a href="https://www.facebook.com/stern.shawn" target='_blank'><i class="fa fa-2x fa-facebook " aria-hidden="true "></i></a></li>
-          <li><a href="https://www.instagram.com/sternnn1991" target='_blank'><i class="fa fa-2x fa-instagram " aria-hidden="true "></i></a></li>
         </ul>
         <div>
     </section>
