Adding weather description text! Including code snippet to capitalize first letter, since result from OpenWeatherMap is all lower case. Removing semicolons since they don't appear to be necessary in JS anymore.

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
     <div class="row">
       <p>IP Address-based location data provided by <a href="http://ipinfo.io" target="_blank">ipinfo.io</a>.</p>
       <p>Weather data provided by <a href="https://openweathermap.org/api" target="_blank">OpenWeatherMap API</a>.</p>
-      <h1>The weather in <span id="city"></span> is currently: <span id=weatherDescription></span></h1>
+      <h1>The weather in <span id="city"></span> is currently:</h1>
       <h2><span id="temperature"></span></h2>
       <p id="weatherIcon"></p>
+      <h3><span id=weatherDescription></span></h3>
     </div>
     <div class="row" id="buttons">
       <button class="btn scaleBtn" id="switchUnits" onclick="swapUnits()">Swap Units (F/C)</button>
