--- a/index.html
+++ b/index.html
@@ -19,13 +19,16 @@
     <div class="row">
       <p>IP Address-based location data provided by <a href="http://ipinfo.io" target="_blank">ipinfo.io</a>.</p>
       <p>Weather data provided by <a href="https://openweathermap.org/api" target="_blank">OpenWeatherMap API</a>.</p>
-      <h1>The weather in <span id="city"></span> is currently:</h1>
-      <h2><span id="temperature"></span></h2>
-      <p id="weatherIcon"></p>
-      <h3><span id=weatherDescription></span></h3>
-    </div>
-    <div class="row" id="buttons">
-      <button class="btn scaleBtn" id="switchUnits" onclick="swapUnits()">Swap Units (F/C)</button>
+      <h1 id="loadingText"><i class="fa fa-refresh fa-spin"></i> Getting Weather..</h1>
+      <div class="row" id="weatherInfo">
+        <h1><span id="city"></span> is currently...</h1>
+        <h2><span id="temperature"></span></h2>
+        <p id="weatherIcon"></p>
+        <h3><span id=weatherDescription></span></h3>
+      </div>
+      <div class="row" id="buttons">
+        <button class="btn scaleBtn" id="switchUnits" onclick="swapUnits()">Swap Units (F/C)</button>
+      </div>
     </div>
   </section>
 
